[package]
name = "screeps-server-kit"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "Local private-server toolkit for Screeps bot development: Docker stack lifecycle, world bootstrap, tick control, deploy orchestration, and console/metrics capture (library + operator CLI)."
# MECHANISM crate (Phase 0 plan, P0.A14): everything here is bot-agnostic —
# bot-specific evaluation POLICY (smoke gates, scenario orchestration)
# lives in consumers such as ../screeps-ibex-eval.
# Lifecycle: starts in-repo (workspace-excluded); extracts to a submodule
# with its own remote once stable (Phase 0 plan, decision D-1). Keep this
# crate self-contained: no workspace-crate deps, no repo-relative path
# assumptions beyond the documented .screeps.yaml discovery rule.

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "io-std", "signal"] }
# The shared Screeps REST/websocket client (P0.A12): auth, pinned
# endpoint set, console socket. Path dep while in-repo; becomes a git
# dep at extraction (decision D-1).
screeps-rest-api = { path = "../screeps-rest-api" }
# The deployment pipeline (P0.A13): cargo build -> wasm-bindgen -> glue
# -> wasm-opt -> code upload, driven as a library by deploy.rs. Same
# in-repo/extraction lifecycle (D-1) as the other siblings.
screeps-pack = { path = "../screeps-pack" }
# Optional spawn-site selection for `bootstrap` (P0.P4 follow-on):
# `spawnPlacement: prospector` in config/local.yml routes first-spawn
# placement through the prospector's two-stage scan/fetch/recommend
# pipeline. Same in-repo/extraction lifecycle (D-1).
screeps-prospector = { path = "../screeps-prospector" }
# buildkit_providerless: the upstream screeps-launcher Dockerfile is
# BuildKit-only (`FROM --platform=$BUILDPLATFORM`, `RUN --mount`,
# heredocs) — the classic /build endpoint cannot build it (P0.A9(d),
# verified live 2026-06-10).
bollard = { version = "0.19", features = ["buildkit_providerless"] }
# Build-context tar for `server build-image` (P0.A9(d)); bytes feeds
# bollard::body_full.
tar = "0.4"
bytes = "1"
# reqwest stays for the server-CLI client (port 21026) — that is the
# launcher's own HTTP protocol, not the Screeps game API.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = { version = "0.10", features = ["serde"] }

# screeps-prospector pulls in screeps-foreman, whose own dependencies are
# git URLs; redirect them to the local clones exactly as the prospector's
# manifest does. [patch] tables apply only from the BUILD ROOT — this
# crate is workspace-excluded (its own root), so the prospector's patch
# table does not reach builds started here (mirrors
# ../screeps-prospector/Cargo.toml).
[patch.'https://github.com/Azaril/screeps-cache']
screeps-cache = { path = "../screeps-cache" }

[patch.'https://github.com/Azaril/screeps-common']
screeps-common = { path = "../screeps-common" }
